--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 	</parent>
 
 	<name>Explore With Me</name>
+	<modules>
+		<module>ewm-service</module>
+		<module>stats</module>
+	</modules>
 
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
@@ -25,6 +29,18 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<excludes>
+							<exclude>
+								<groupId>org.projectlombok</groupId>
+								<artifactId>lombok</artifactId>
+							</exclude>
+						</excludes>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -76,74 +92,74 @@
 						</execution>
 					</executions>
 				</plugin>
-				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.8</version>
-					<configuration>
-						<output>file</output>
-					</configuration>
-					<executions>
-						<execution>
-							<id>jacoco-initialize</id>
-							<goals>
-								<goal>prepare-agent</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>jacoco-check</id>
-							<goals>
-								<goal>check</goal>
-							</goals>
-							<configuration>
-								<rules>
-									<rule>
-										<element>BUNDLE</element>
-										<limits>
-											<limit>
-												<counter>INSTRUCTION</counter>
-												<value>COVEREDRATIO</value>
-												<minimum>0.01</minimum>
-											</limit>
-											<limit>
-												<counter>LINE</counter>
-												<value>COVEREDRATIO</value>
-												<minimum>0.2</minimum>
-											</limit>
-											<limit>
-												<counter>BRANCH</counter>
-												<value>COVEREDRATIO</value>
-												<minimum>0.2</minimum>
-											</limit>
-											<limit>
-												<counter>COMPLEXITY</counter>
-												<value>COVEREDRATIO</value>
-												<minimum>0.2</minimum>
-											</limit>
-											<limit>
-												<counter>METHOD</counter>
-												<value>COVEREDRATIO</value>
-												<minimum>0.2</minimum>
-											</limit>
-											<limit>
-												<counter>CLASS</counter>
-												<value>MISSEDCOUNT</value>
-												<maximum>1</maximum>
-											</limit>
-										</limits>
-									</rule>
-								</rules>
-							</configuration>
-						</execution>
-						<execution>
-							<id>jacoco-site</id>
-							<phase>install</phase>
-							<goals>
-								<goal>report</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+<!--				<plugin>-->
+<!--					<groupId>org.jacoco</groupId>-->
+<!--					<artifactId>jacoco-maven-plugin</artifactId>-->
+<!--					<version>0.8.8</version>-->
+<!--					<configuration>-->
+<!--						<output>file</output>-->
+<!--					</configuration>-->
+<!--					<executions>-->
+<!--						<execution>-->
+<!--							<id>jacoco-initialize</id>-->
+<!--							<goals>-->
+<!--								<goal>prepare-agent</goal>-->
+<!--							</goals>-->
+<!--						</execution>-->
+<!--						<execution>-->
+<!--							<id>jacoco-check</id>-->
+<!--							<goals>-->
+<!--								<goal>check</goal>-->
+<!--							</goals>-->
+<!--							<configuration>-->
+<!--								<rules>-->
+<!--									<rule>-->
+<!--										<element>BUNDLE</element>-->
+<!--										<limits>-->
+<!--											<limit>-->
+<!--												<counter>INSTRUCTION</counter>-->
+<!--												<value>COVEREDRATIO</value>-->
+<!--												<minimum>0.01</minimum>-->
+<!--											</limit>-->
+<!--											<limit>-->
+<!--												<counter>LINE</counter>-->
+<!--												<value>COVEREDRATIO</value>-->
+<!--												<minimum>0.2</minimum>-->
+<!--											</limit>-->
+<!--											<limit>-->
+<!--												<counter>BRANCH</counter>-->
+<!--												<value>COVEREDRATIO</value>-->
+<!--												<minimum>0.2</minimum>-->
+<!--											</limit>-->
+<!--											<limit>-->
+<!--												<counter>COMPLEXITY</counter>-->
+<!--												<value>COVEREDRATIO</value>-->
+<!--												<minimum>0.2</minimum>-->
+<!--											</limit>-->
+<!--											<limit>-->
+<!--												<counter>METHOD</counter>-->
+<!--												<value>COVEREDRATIO</value>-->
+<!--												<minimum>0.2</minimum>-->
+<!--											</limit>-->
+<!--											<limit>-->
+<!--												<counter>CLASS</counter>-->
+<!--												<value>MISSEDCOUNT</value>-->
+<!--												<maximum>1</maximum>-->
+<!--											</limit>-->
+<!--										</limits>-->
+<!--									</rule>-->
+<!--								</rules>-->
+<!--							</configuration>-->
+<!--						</execution>-->
+<!--						<execution>-->
+<!--							<id>jacoco-site</id>-->
+<!--							<phase>install</phase>-->
+<!--							<goals>-->
+<!--								<goal>report</goal>-->
+<!--							</goals>-->
+<!--						</execution>-->
+<!--					</executions>-->
+<!--				</plugin>-->
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -173,14 +189,14 @@
 		</profile>
 		<profile>
 			<id>coverage</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
+<!--			<build>-->
+<!--				<plugins>-->
+<!--					<plugin>-->
+<!--						<groupId>org.jacoco</groupId>-->
+<!--						<artifactId>jacoco-maven-plugin</artifactId>-->
+<!--					</plugin>-->
+<!--				</plugins>-->
+<!--			</build>-->
 		</profile>
 	</profiles>
 
