--- a/ewm-stats/pom.xml
+++ b/ewm-stats/pom.xml
@@ -8,7 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stats</artifactId>
+    <artifactId>ewm-stats</artifactId>
     <packaging>pom</packaging>
 
     <modules>
