--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<name>Explore With Me</name>
 	<modules>
 		<module>ewm-service</module>
-		<module>stats</module>
+		<module>ewm-stats</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
