--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,35 @@
 version: '3.1'
 services:
-  stats-server:
-    ports:
-      - "9090:9090"
 
   stats-db:
     image: postgres:14-alpine
-
-  ewm-service:
+    container_name: stats-db
     ports:
-      - "8080:8080"
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=ewm-stats
+      - POSTGRES_USER=user1
+      - POSTGRES_PASSWORD=iamroot
+      #- TZ=Europe/Moscow
 
-  ewm-db:
-    image: postgres:14-alpine
+  stats-server:
+    build: shareit-server
+    image: server-image
+    container_name: server
+    ports:
+      - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/ewm-stats
+      - SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver
+      - SPRING_DATASOURCE_USERNAME:user1
+      - SPRING_DATASOURCE_PASSWORD:iamroot
+      #- TZ=Europe/Moscow
+
+#  ewm-service:
+#    ports:
+#      - "8080:8080"
+
+#  ewm-db:
+#    image: postgres:14-alpine
