--- a/ewm-stats/stats-server/pom.xml
+++ b/ewm-stats/stats-server/pom.xml
@@ -10,10 +10,6 @@
     </parent>
 
     <artifactId>stats-server</artifactId>
-<!--    <packaging>jar</packaging>-->
-
-<!--    <name>stats-server</name>-->
-<!--    <url>http://maven.apache.org</url>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,6 +30,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
@@ -68,8 +69,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-<!--            <version>3.8.1</version>-->
-<!--            <scope>test</scope>-->
         </dependency>
     </dependencies>
 
@@ -78,9 +77,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-<!--                <configuration>-->
-<!--                    <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>-->
-<!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
