--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<name>Explore With Me</name>
@@ -55,7 +55,7 @@
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>3.1.2</version>
 					<configuration>
-						<configLocation>my_checkstyle.xml</configLocation>
+						<configLocation>checkstyle.xml</configLocation>
 						<failOnViolation>true</failOnViolation>
 						<logViolationsToConsole>true</logViolationsToConsole>
 						<includeTestSourceDirectory>true</includeTestSourceDirectory>
@@ -92,74 +92,6 @@
 						</execution>
 					</executions>
 				</plugin>
-<!--				<plugin>-->
-<!--					<groupId>org.jacoco</groupId>-->
-<!--					<artifactId>jacoco-maven-plugin</artifactId>-->
-<!--					<version>0.8.8</version>-->
-<!--					<configuration>-->
-<!--						<output>file</output>-->
-<!--					</configuration>-->
-<!--					<executions>-->
-<!--						<execution>-->
-<!--							<id>jacoco-initialize</id>-->
-<!--							<goals>-->
-<!--								<goal>prepare-agent</goal>-->
-<!--							</goals>-->
-<!--						</execution>-->
-<!--						<execution>-->
-<!--							<id>jacoco-check</id>-->
-<!--							<goals>-->
-<!--								<goal>check</goal>-->
-<!--							</goals>-->
-<!--							<configuration>-->
-<!--								<rules>-->
-<!--									<rule>-->
-<!--										<element>BUNDLE</element>-->
-<!--										<limits>-->
-<!--											<limit>-->
-<!--												<counter>INSTRUCTION</counter>-->
-<!--												<value>COVEREDRATIO</value>-->
-<!--												<minimum>0.01</minimum>-->
-<!--											</limit>-->
-<!--											<limit>-->
-<!--												<counter>LINE</counter>-->
-<!--												<value>COVEREDRATIO</value>-->
-<!--												<minimum>0.2</minimum>-->
-<!--											</limit>-->
-<!--											<limit>-->
-<!--												<counter>BRANCH</counter>-->
-<!--												<value>COVEREDRATIO</value>-->
-<!--												<minimum>0.2</minimum>-->
-<!--											</limit>-->
-<!--											<limit>-->
-<!--												<counter>COMPLEXITY</counter>-->
-<!--												<value>COVEREDRATIO</value>-->
-<!--												<minimum>0.2</minimum>-->
-<!--											</limit>-->
-<!--											<limit>-->
-<!--												<counter>METHOD</counter>-->
-<!--												<value>COVEREDRATIO</value>-->
-<!--												<minimum>0.2</minimum>-->
-<!--											</limit>-->
-<!--											<limit>-->
-<!--												<counter>CLASS</counter>-->
-<!--												<value>MISSEDCOUNT</value>-->
-<!--												<maximum>1</maximum>-->
-<!--											</limit>-->
-<!--										</limits>-->
-<!--									</rule>-->
-<!--								</rules>-->
-<!--							</configuration>-->
-<!--						</execution>-->
-<!--						<execution>-->
-<!--							<id>jacoco-site</id>-->
-<!--							<phase>install</phase>-->
-<!--							<goals>-->
-<!--								<goal>report</goal>-->
-<!--							</goals>-->
-<!--						</execution>-->
-<!--					</executions>-->
-<!--				</plugin>-->
 			</plugins>
 		</pluginManagement>
 	</build>
@@ -189,14 +121,6 @@
 		</profile>
 		<profile>
 			<id>coverage</id>
-<!--			<build>-->
-<!--				<plugins>-->
-<!--					<plugin>-->
-<!--						<groupId>org.jacoco</groupId>-->
-<!--						<artifactId>jacoco-maven-plugin</artifactId>-->
-<!--					</plugin>-->
-<!--				</plugins>-->
-<!--			</build>-->
 		</profile>
 	</profiles>
 
