--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,15 @@ services:
       #- TZ=Europe/Moscow
 
   stats-server:
-    build: shareit-server
-    image: server-image
-    container_name: server
+    build: stats-server
+    image: stats-server-image
+    container_name: stats-server
     ports:
       - "9090:9090"
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/ewm-stats
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats
       - SPRING_DRIVER_CLASS_NAME:org.postgresql.Driver
       - SPRING_DATASOURCE_USERNAME:user1
       - SPRING_DATASOURCE_PASSWORD:iamroot
