--- a/stats-server/pom.xml
+++ b/stats-server/pom.xml
@@ -8,13 +8,13 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ewm-stats</artifactId>
+    <artifactId>stats-server</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>stats-server</module>
-        <module>stats-client</module>
-        <module>stats-dto</module>
+        <module>server</module>
+        <module>client</module>
+        <module>dto</module>
     </modules>
 
     <dependencies>
