--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - POSTGRES_PASSWORD=iamroot
       #- TZ=Europe/Moscow
 
-  stats-server:
-    build: stats-server
-    image: stats-server-image
-    container_name: stats-server
+  server:
+    build: server
+    image: server-image
+    container_name: server
     ports:
       - "9090:9090"
     depends_on:
