--- a/stats-server/dto/pom.xml
+++ b/stats-server/dto/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>ewm-stats</artifactId>
+        <artifactId>stats-server</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>stats-dto</artifactId>
+    <artifactId>dto</artifactId>
 <!--    <packaging>jar</packaging>-->
 
 <!--    <name>stats-dto</name>-->
