--- a/ewm-stats/stats-dto/pom.xml
+++ b/ewm-stats/stats-dto/pom.xml
@@ -4,16 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ru.practicum</groupId>
-        <artifactId>stats-server</artifactId>
+        <artifactId>ewm-stats</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>dto</artifactId>
-<!--    <packaging>jar</packaging>-->
-
-<!--    <name>stats-dto</name>-->
-<!--    <url>http://maven.apache.org</url>-->
+    <artifactId>stats-dto</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,13 +31,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-<!--            А ЭТО-ТО ЗАЧЕМ ???????????????=====================================================-->
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-<!--            <version>3.8.1</version>-->
-<!--            <scope>test</scope>-->
         </dependency>
     </dependencies>
 </project>
