--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<name>Explore With Me</name>
 	<modules>
 		<module>ewm-service</module>
-		<module>stats-server</module>
+		<module>ewm-stats</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
@@ -123,5 +123,4 @@
 			<id>coverage</id>
 		</profile>
 	</profiles>
-
 </project>
