--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 
 	<name>Explore With Me</name>
 	<modules>
-		<module>ewm-service</module>
-		<module>ewm-stats</module>
+		<module>main-service</module>
+		<module>stats</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
