--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 javax.persistence.schema-generation.database.action=create
@@ -22,7 +22,7 @@ spring.datasource.password=iamroot
 
 #########################################################################
 
-spring.datasource.url=jdbc:h2:file:./db/ewm-main
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=test
-spring.datasource.password=test
+#spring.datasource.url=jdbc:h2:file:./db/ewm-main
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=test
+#spring.datasource.password=test
