--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8080
 
 spring.main.allow-bean-definition-overriding=true
 
+#stats-server.url=${STATS_SERVER_URL:http://localhost:9090}/////////////////////////////////////////
+
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
@@ -17,7 +19,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-main
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=user1
+spring.datasource.username=postgres
 spring.datasource.password=iamroot
 
 #########################################################################
