--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=9090
 
+stats-server.url=${STATS_SERVER_URL:http://localhost:9090}
+
 spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.hibernate.ddl-auto=none
