--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.main.allow-bean-definition-overriding=true
 
 stats-server.url=${STATS_SERVER_URL:http://stats-server:9090}
+#stats-server.url=${STATS_SERVER_URL:http://localhost:9090}
 
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
